--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   radial_button: ^1.0.1
   progressive_time_picker: ^1.0.3
   url_launcher:
+  alarm: ^4.1.1
+#  android_alarm_manager_plus: 4.0.5
+#  flutter_local_notifications: 18.0.1
 
 
 
@@ -87,6 +90,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/alarm.mp3
 #    - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
