--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  shared_preferences: ^2.2.3
+  shared_preferences: ^2.3.4
   get: ^4.6.6
   firebase_core: ^3.8.1
   firebase_auth: ^5.3.4
@@ -51,6 +51,7 @@ dependencies:
   progressive_time_picker: ^1.0.3
   url_launcher:
   alarm: ^4.1.1
+#  hive: ^2.2.3
 #  android_alarm_manager_plus: 4.0.5
 #  flutter_local_notifications: 18.0.1
 
