--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,9 +46,10 @@ dependencies:
   flutter_screenutil: ^5.9.3
   salomon_bottom_bar: ^3.3.2
   fade_out_particle: ^1.2.1
-  intl: ^0.20.1
+  intl:
   radial_button: ^1.0.1
   url_launcher: ^6.3.1
+  pay:
 
 
 
