--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
     <application
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
-        android:label="QurbaniApp"
+        android:label="OnlineQurbaniShop"
         android:usesCleartextTraffic="true">
 
         <activity
